--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Emoji picker that allows you to add emojis to input elements.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node example/server.js",
+    "build": "rm -rf dist/* && webpack -p --config webpack.production.config.js",
+    "test": "PHANTOMJS_BIN=\"${PHANTOMJS_BIN:=`which phantomjs`}\" ./node_modules/karma/bin/karma start karma.config.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,24 @@
   "bugs": {
     "url": "https://github.com/crowdriff/react-emojiboard/issues"
   },
-  "homepage": "https://github.com/crowdriff/react-emojiboard#readme"
+  "homepage": "https://github.com/crowdriff/react-emojiboard#readme",
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "express": "^4.15.2",
+    "react": "^15.5.4",
+    "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^15.5.4",
+    "react-hot-loader": "^1.3.1",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-espower-loader": "^1.0.1"
+  },
+  "files": [
+    "package.json",
+    "dist/react-emojiboard.js"
+  ]
 }
